<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AddScreenImageAddView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@color/design_default_color_secondary"
        android:onClick="selectPhoto"
        >

        <TextView
            android:id="@+id/AddScreenSelectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddScreenSelect"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/AddScreenImage"
            app:layout_constraintVertical_bias="0.506" />

        <ImageView
            android:id="@+id/AddScreenImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/AddScreenName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:inputType="textAutoCorrect"
        android:hint="@string/AddScreenName"
        />

    <EditText
        android:id="@+id/AddScreenDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="date"
        android:textAlignment="center"
        android:hint="@string/AddScreenDate"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/AddScreenSave"
        android:onClick="addPhoto"/>

</LinearLayout>